# intellicrawl

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-ci.txt
.firecrawl_cache/: cache.db-shm  cache.db-wal
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml
advanced-agent/: main.py  requirements.txt
advanced-agent/.firecrawl_cache/: cache.db
advanced-agent/src/: firecrawl.py  firecrawl_service.py  logging_config.py  models.py  prompts.py  workflow.py
docs/: architecture.md  faq.md  usage-guide.md
docs/figures/evidence-trace/: README.md  contract.md  provenance.json
docs/figures/evidence-trace/editable/: intellicrawl-evidence-trace.pptx
docs/figures/evidence-trace/preflight/: pdf-report.json  pptx-inspect.ndjson
docs/media/: research-pipeline.excalidraw
examples/: demo-report.csv  demo-report.json  demo-report.md  sample-output.csv  sample-output.json  sample-output.md
scripts/: build_demo_artifacts.py  render_preview.py
simple-agent/: .env.example  main.py  requirements.txt
src/intellicrawl/: __init__.py  __main__.py  cli.py  contracts.py  demo.py  live.py  models.py  pipeline.py  prompts.py  providers.py  renderers.py  settings.py
tests/: test_cli.py  test_firecrawl_service.py  test_live.py  test_models.py  test_output_rendering.py  test_pipeline.py  test_prompts.py  test_providers.py  test_renderers.py  test_settings.py
