[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "intellicrawl"
version = "2.0.0"
description = "Source-backed developer-tool research with Firecrawl, OpenAI, and LangGraph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ethan Villalovoz" }]
keywords = ["agents", "developer-tools", "firecrawl", "langgraph", "research"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "langgraph>=1.2,<2",
  "platformdirs>=4.3,<5",
  "pydantic>=2.13,<3",
  "rich>=14.3,<16",
]

[project.optional-dependencies]
live = [
  "diskcache>=5.6,<6",
  "firecrawl-py>=4.32,<5",
  "langchain-openai>=1.3,<2",
  "python-dotenv>=1.1,<2",
]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.2,<2",
  "pytest-cov>=6.3,<8",
  "ruff>=0.15,<1",
]

[project.scripts]
intellicrawl = "intellicrawl.cli:main"

[project.urls]
Homepage = "https://github.com/ethanvillalovoz/intellicrawl"
Repository = "https://github.com/ethanvillalovoz/intellicrawl"
Issues = "https://github.com/ethanvillalovoz/intellicrawl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=intellicrawl --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/intellicrawl/__main__.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
